Pequena alteração no CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,16 +10,17 @@ elseif(PLATFORM STREQUAL "linux")
     set(PLATFORM "x11")
 endif()
 
-
-add_library(AOCF SHARED 
-src/aocf_platform_${PLATFORM}.cpp
-src/aocf_gl.cpp
-src/aocf_keyboard.cpp
+set (SOURCES 
+    src/aocf_platform_${PLATFORM}.cpp
+    src/aocf_gl.cpp
+    src/aocf_keyboard.cpp
 )
+
+add_library(AOCF SHARED ${SOURCES})
 target_include_directories(AOCF PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_compile_definitions(AOCF PRIVATE AOCF_EXPORTS)
 target_link_libraries(AOCF PRIVATE opengl32)
 
-# test
+
 add_executable(test_aocf "test/test_aocf.cpp")
 target_link_libraries(test_aocf PRIVATE AOCF)
